--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "jest-enzyme": "^7.1.2"
+    "eslint": "^7.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "jest-enzyme": "^7.1.2",
+    "prettier": "^2.2.1"
   }
 }
